# VentricMesh

./: .gitignore  Mesh_ED.stl  Mesh_ED_3D.msh  README.md  create_mesh.py  example.py  mesh_utils.py  pyproject.toml  utils.py
.github/workflows/: main.yml
src/ventric_mesh/: __init__.py  create_mesh.py  mesh_utils.py  utils.py
tests/: test_import.py  test_simple_mesh.py  test_simplemesh.py
